#73541 Criação de um campo para concatenar o id do cliente junto ao nome.

--- a/Glass/Relatorios/NFe/rptFiscal.rdlc
+++ b/Glass/Relatorios/NFe/rptFiscal.rdlc
@@ -634,7 +634,7 @@ Parameters!Agrupar.Value=4, "Data Emissão: " + Format(Fields!DataEmissao.Value,
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!NomeDestRem.Value</Value>
+                              <Value>=Fields!IdNomeDestRem.Value</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -1761,6 +1761,10 @@ Parameters!Agrupar.Value=4, Format(Fields!DataEmissao.Value, "d"))</GroupExpress
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="NomeDestRem">
+          <DataField>NomeDestRem</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="IdNomeDestRem">
           <DataField>NomeDestRem</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
