--- a/Glass/Relatorios/rptListaPedidosRota.rdlc
+++ b/Glass/Relatorios/rptListaPedidosRota.rdlc
@@ -40,13 +40,16 @@
               <Width>1.2554cm</Width>
             </TablixColumn>
             <TablixColumn>
+              <Width>1.15194cm</Width>
+            </TablixColumn>
+            <TablixColumn>
               <Width>1.47199cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.12596cm</Width>
+              <Width>0.90771cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.15761cm</Width>
+              <Width>2.22392cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.70195cm</Width>
@@ -72,7 +75,7 @@
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.5291cm</Height>
+              <Height>0.79365cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -83,7 +86,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Num.</Value>
+                              <Value>Num. Pedido</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -94,6 +97,41 @@
                       </Paragraphs>
                       <rd:DefaultName>textbox4</rd:DefaultName>
                       <ZIndex>25</ZIndex>
+                      <Style>
+                        <TopBorder>
+                          <Style>Solid</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Style>Solid</Style>
+                        </BottomBorder>
+                        <VerticalAlign>Bottom</VerticalAlign>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox8">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Num. Orca</Value>
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox8</rd:DefaultName>
                       <Style>
                         <TopBorder>
                           <Style>Solid</Style>
@@ -166,13 +204,16 @@
                       </Paragraphs>
                       <rd:DefaultName>Textbox28</rd:DefaultName>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -202,13 +243,16 @@
                       <rd:DefaultName>textbox5</rd:DefaultName>
                       <ZIndex>23</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -238,13 +282,16 @@
                       <rd:DefaultName>textbox45</rd:DefaultName>
                       <ZIndex>22</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -274,13 +321,16 @@
                       <rd:DefaultName>textbox6</rd:DefaultName>
                       <ZIndex>21</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -310,13 +360,16 @@
                       <rd:DefaultName>textbox22</rd:DefaultName>
                       <ZIndex>20</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -346,13 +399,16 @@
                       <rd:DefaultName>textbox12</rd:DefaultName>
                       <ZIndex>19</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -382,13 +438,16 @@
                       <rd:DefaultName>textbox25</rd:DefaultName>
                       <ZIndex>18</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -458,13 +517,16 @@
                       <rd:DefaultName>textbox16</rd:DefaultName>
                       <ZIndex>16</ZIndex>
                       <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
                         <TopBorder>
                           <Style>Solid</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Style>Solid</Style>
                         </BottomBorder>
-                        <VerticalAlign>Bottom</VerticalAlign>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -508,9 +570,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>11</ColSpan>
+                    <ColSpan>12</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -548,6 +611,37 @@
                       </Paragraphs>
                       <rd:DefaultName>textbox7</rd:DefaultName>
                       <ZIndex>9</ZIndex>
+                      <Style>
+                        <BackgroundColor>=IIf((RowNumber(Nothing) Mod 2 = 0),"White", "#EFF3FB")</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox10">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!IdOrcamento.Value</Value>
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Left</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox10</rd:DefaultName>
                       <Style>
                         <BackgroundColor>=IIf((RowNumber(Nothing) Mod 2 = 0),"White", "#EFF3FB")</BackgroundColor>
                         <PaddingLeft>2pt</PaddingLeft>
@@ -913,9 +1007,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>9</ColSpan>
+                    <ColSpan>10</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -1002,6 +1097,40 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="Textbox27">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox27</rd:DefaultName>
+                      <Style>
+                        <TopBorder>
+                          <Color>Black</Color>
+                          <Style>Solid</Style>
+                          <Width>1pt</Width>
+                        </TopBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="textbox50">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -1037,7 +1166,6 @@ Format(Sum(Fields!Peso.Value), "N").ToString() + "kg"</Value>
                       </Style>
                     </Textbox>
                     <ColSpan>8</ColSpan>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell />
@@ -1105,6 +1233,7 @@ Format(Sum(Fields!Peso.Value), "N").ToString() + "kg"</Value>
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -1156,7 +1285,7 @@ Format(Sum(Fields!Peso.Value), "N").ToString() + "kg"</Value>
         </TablixRowHierarchy>
         <DataSetName>PedidoRpt</DataSetName>
         <Top>3.57936cm</Top>
-        <Height>2.6455cm</Height>
+        <Height>2.91005cm</Height>
         <Width>18.96825cm</Width>
         <ZIndex>1</ZIndex>
         <Style />
@@ -1259,7 +1388,7 @@ Format(Sum(Fields!Peso.Value), "N").ToString() + "kg"</Value>
         <Style />
       </Image>
     </ReportItems>
-    <Height>6.22486cm</Height>
+    <Height>6.48941cm</Height>
     <Style />
   </Body>
   <Width>18.96825cm</Width>
