--- a/Glass/Relatorios/NFe/rptFiscal.rdlc
+++ b/Glass/Relatorios/NFe/rptFiscal.rdlc
@@ -1765,7 +1765,7 @@ Parameters!Agrupar.Value=4, Format(Fields!DataEmissao.Value, "d"))</GroupExpress
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="IdNomeDestRem">
-          <DataField>NomeDestRem</DataField>
+          <DataField>IdNomeDestRem</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="CpfCnpjDestRem">
