--- a/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
+++ b/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
@@ -307,7 +307,7 @@
                                 v-bind:disabled="itemVenda.produto.espessura > 0" step="0.01" min="0.01"
                                 v-if="itemVenda && itemVenda.produto">
                         </div>
-                        <div style="text-align: center">
+                        <div style="text-align: center" v-if="item.composicao.possuiFilhos && empresaVendeVidro">
                             Aplicar Beneficiamentos Composição
                             <input type="checkbox" v-model="itemVenda.aplicarBenefComposicao" />
                         </div>
