#140 Correção em bugs encontrados nos testes no servidor

--- a/Glass/Layout.master
+++ b/Glass/Layout.master
@@ -41,7 +41,8 @@
         Vue.prototype.$http = axios.create({
             baseURL: '<%= ConfigurationManager.AppSettings["backendUrl"] %>',
             headers: {
-                'Authorization': 'Bearer <%= ObterCookieAuth() %>'
+                'Authorization': 'Bearer <%= ObterCookieAuth() %>',
+                'Cache-Control': 'no-store, no-cache'
             }
         });
 
