--- a/Glass/Vue/Pedidos/Templates/CadPedido.Produtos.html
+++ b/Glass/Vue/Pedidos/Templates/CadPedido.Produtos.html
@@ -1,7 +1,7 @@
 ﻿<section v-if="pedido && (!configuracoes.exibirAmbientes || ambiente)">
     <lista-itens-venda v-bind:mao-de-obra="pedidoMaoDeObra" v-bind:producao-corte="pedidoProducaoCorte" v-bind:mao-de-obra-especial="pedidoMaoDeObraEspecial"
         v-bind:filtro="filtro" v-bind:id-cliente="idCliente" v-bind:cliente-revenda="clienteRevenda" v-bind:tipo-entrega="tipoEntrega"
-        v-bind:percentual-comissao="percentualComissao" v-bind:dados-validacao-produto="dadosValidacaoProduto" tipo-validacao-produto="Pedido"
+        v-bind:percentual-comissao="percentualComissao" v-bind:dados-validacao-produto="dadosValidacaoProduto" tipo-validacao-produto="Pedido" v-bind:id-ambiente="ambiente ? ambiente.id : null"
         v-bind:quantidade-ambiente="ambiente ? ambiente.quantidade : null" v-bind:obrigar-processo-e-aplicacao-roteiro="configuracoes.obrigarProcessoEAplicacaoRoteiro"
         v-bind:buscar-itens-venda="buscarProdutos" v-bind:editar="editar" v-bind:excluir="excluir" v-bind:atualizar="atualizar"
         v-bind:inserir="inserir" v-bind:exibir-popup-falta-estoque="exibirPopupEstoque" v-bind:exibir-colunas-processo-e-aplicacao="configuracoes.exibirColunasProcessoEAplicacao || pedidoMaoDeObra"
