--- a/Glass/Vue/_Compartilhado/Templates/ListaSelecaoLojas.html
+++ b/Glass/Vue/_Compartilhado/Templates/ListaSelecaoLojas.html
@@ -1,3 +1,3 @@
-﻿<lista-selecao-id-valor v-bind:item-selecionado.sync="lojaAtual" texto-selecionar="Todas"
+﻿<lista-selecao-id-valor v-bind:item-selecionado.sync="lojaAtual" v-bind:texto-selecionar="exibirTodas ? 'Todas' : ''"
     v-bind:funcao-recuperar-itens="buscarLojas">
 </lista-selecao-id-valor>
