#546 Correções em bugs da tela de pedidos

--- a/Glass/Vue/_Compartilhado/Templates/CampoBuscaEtiquetaAplicacao.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoBuscaEtiquetaAplicacao.html
@@ -1,5 +1,5 @@
-﻿<campo-busca-com-popup v-bind:id="idAplicacao" v-bind:nome="codigoAplicacao"
+﻿<campo-busca-com-popup v-bind:id.sync="idAplicacao" v-bind:nome.sync="codigoAplicacao"
     v-bind:item-selecionado.sync="aplicacaoAtual" campo-id="id" campo-nome="codigo"
     v-bind:funcao-buscar-itens="buscarAplicacoes" v-bind:pre-carregar-itens="true"
-    url-popup="/Utils/SelEtiquetaAplicacao.aspx" :largura-popup="700" :altura-popup="455"
+    url-popup="/Utils/SelEtiquetaAplicacao.aspx" v-bind:largura-popup="700" v-bind:altura-popup="455"
     style="width: 60px"></campo-busca-com-popup>
