--- a/Glass/Vue/_Compartilhado/Templates/CampoBuscaEtiquetaProcesso.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoBuscaEtiquetaProcesso.html
@@ -1,5 +1,5 @@
-﻿<campo-busca-com-popup v-bind:id="idProcesso" v-bind:nome="codigoProcesso"
+﻿<campo-busca-com-popup v-bind:id.sync="idProcesso" v-bind:nome.sync="codigoProcesso"
     v-bind:item-selecionado.sync="processoAtual" campo-id="id" campo-nome="codigo"
     v-bind:funcao-buscar-itens="buscarProcessos" v-bind:pre-carregar-itens="true"
-    url-popup="/Utils/SelEtiquetaProcesso.aspx" :largura-popup="700" :altura-popup="455"
+    url-popup="/Utils/SelEtiquetaProcesso.aspx" v-bind:largura-popup="700" v-bind:altura-popup="455"
     style="width: 60px"></campo-busca-com-popup>
