--- a/Glass/Painel.master
+++ b/Glass/Painel.master
@@ -1,11 +1,11 @@
 <%@ Master Language="C#" MasterPageFile="~/Layout.master" AutoEventWireup="true"
-    CodeBehind="Painel.master.cs" Inherits="Glass.UI.Web.Painel" %>
+    CodeBehind="Painel.master.cs" Inherits="Glass.UI.Web.Painel" EnableViewState="false" %>
 
 <asp:Content ID="Menu" ContentPlaceHolderID="Menu" runat="server">
     <asp:Menu ID="mnuGeral" runat="server" Orientation="Horizontal" MaximumDynamicDisplayLevels="5" ViewStateMode="Disabled"
         Font-Size="8pt" ForeColor="#EAFFFF" StaticSubMenuIndent="2px" Font-Bold="True"
         Font-Names="arial,verdana" StaticPopOutImageUrl="~/Images/divisoria.png" StaticPopOutImageTextFormatString=""
-        Style="margin-bottom: 0px" DisappearAfter="1000" EnableViewState="False">
+        Style="margin-bottom: 0px" DisappearAfter="1000" EnableViewState="False" RenderingMode="List">
         <LevelSubMenuStyles>
             <asp:SubMenuStyle Font-Underline="False" />
         </LevelSubMenuStyles>
