--- a/Glass/Style/Geral.css
+++ b/Glass/Style/Geral.css
@@ -10,12 +10,11 @@
 
   #ctl00_ctl00_Menu_mnuGeral a.dynamic, #ctl00_ctl00_Menu_mnuGeral a.highlighted {
     text-align: left;
-    vertical-align: central;
     height: auto !important;
   }
 
   #ctl00_ctl00_Menu_mnuGeral a.dynamic {
-    padding: 5px !important;
+    padding: 4px !important;
   }
 
   #ctl00_ctl00_Menu_mnuGeral li.dynamic.has-popup a.dynamic {
@@ -383,27 +382,18 @@ section {
       left: 0px;
       right: 0px;
       position: initial;
-      margin: 0 3px;
+      margin: 0;
       padding: 0;
     }
 
     div.filtros .botaoPesquisar, section.filtros .botaoPesquisar {
       position: relative;
       top: 2px;
-      margin: 0 4px 0 2px;
+      margin: 0 4px 0 0px;
     }
 
     div.filtros span, section.filtros span {
       padding-left: initial;
-    }
-
-    div.filtros input[type="text"], div.filtros input[type="number"], div.filtros input[type="search"],
-    div.filtros input[type="date"], div.filtros input[type="time"], div.filtros input[type="email"],
-    div.filtros input[type="password"], div.filtros textarea, div.filtros select,
-    section.filtros input[type="text"], section.filtros input[type="number"], section.filtros input[type="search"],
-    section.filtros input[type="date"], section.filtros input[type="time"], section.filtros input[type="email"],
-    section.filtros input[type="password"], section.filtros textarea, section.filtros select {
-      margin: 2px 1px;
     }
 
   div.detalhes, section.detalhes {
